# bloom-filters-py

./: README.md  pyproject.toml
src/bloom_filters_py/: __init__.py  interface.py
tests/: test_bloom_filter.py
