[project]
name = "bloom-filters-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "=", email = "jhowell45@googlemail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
  "ruff"
]
test = [
  "pytest"
]

[tool.pytest]
addopts = ["-v"]
